<resources>
    <string name="app_name">看个天气</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="setting">设置</string>
    <string name="auto_refresh">自动更新天气</string>
    <string name="auto_refresh_info">后台自动更新</string>
    <string name="more">更多</string>
    <string name="refresh_frequency">更新频率</string>
    <string name="refresh_frequency_tip">调整更新的间隔(小时)</string>
    <string name="github">GitHub</string>
    <string name="version">版本</string>
    <string name="version_name">1.0</string>
    <string name="default_text">N/A</string>
    <string name="now_desc">晴</string>
    <string name="now_location">大连</string>
    <string name="now_temp">24°</string>
    <string name="now_tip">天气不错，出去浪吧</string>

</resources>
