<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

        <ImageView
            android:paddingTop="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/now_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/sunny" />
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/now_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/now_desc"/>
        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/now_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/now_location"/>
        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/now_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="100sp"
            android:text="@string/now_temp"/>
        <TextView
            android:paddingTop="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/now_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/now_tip"/>

</LinearLayout>
